--- a/PracticaMovimiento/PracticaMovimiento.csproj
+++ b/PracticaMovimiento/PracticaMovimiento.csproj
@@ -94,6 +94,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="AT.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Waluigi.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
